@@ -672,7 +672,7 @@ public abstract class ToolsKPIService<R, S> {
 		calculateThresholdValue(selectedIds, kpiElement, kpiRequest.getLabel());
 
 		for (String selectedId : selectedIds) {
-			Node node = nodeWiseKPIValue.get(Pair.of(kpiRequest.getSelecedHierarchyLabel(), selectedId));
+			Node node = nodeWiseKPIValue.get(Pair.of(kpiRequest.getLabel(), selectedId));
 			if (null != node) {
 				Object obj = node.getValue();
 
@@ -720,7 +720,7 @@ public abstract class ToolsKPIService<R, S> {
 		Set<String> selectedIds = getSelectedIds(kpiRequest);
 		calculateThresholdValue(selectedIds, kpiElement, kpiRequest.getLabel());
 		for (String selectedId : selectedIds) {
-			Node node = nodeWiseKPIValue.get(Pair.of(kpiRequest.getSelecedHierarchyLabel(), selectedId));
+			Node node = nodeWiseKPIValue.get(Pair.of(kpiRequest.getLabel(), selectedId));
 			if (null != node) {
 				Object obj = node.getValue();
 				List<DataCount> dataCounts = obj instanceof List<?> ? (List<DataCount>) obj : null;
@@ -729,7 +729,7 @@ public abstract class ToolsKPIService<R, S> {
 							dataCounts.stream()
 									.filter(val -> val.getValue() != null)
 									.map(val -> (R) val.getValue())
-									.collect(Collectors.toList());
+									.toList();
 
 					R calculatedAggValue = getCalculatedAggValue(aggValues, kpiId);
 					String maturity =
@@ -814,7 +814,7 @@ public abstract class ToolsKPIService<R, S> {
 		for (String selectedId : selectedIds) {
 			Node node =
 					nodeWiseKPIValue.get(
-							Pair.of(kpiRequest.getSelecedHierarchyLabel().toUpperCase(), selectedId));
+							Pair.of(kpiRequest.getLabel().toUpperCase(), selectedId));
 			if (null != node) {
 				Object obj = node.getValue();
 				Map<String, List<DataCount>> valueMap =
@@ -875,7 +875,7 @@ public abstract class ToolsKPIService<R, S> {
 		for (String selectedId : selectedIds) {
 			Node node =
 					nodeWiseKPIValue.get(
-							Pair.of(kpiRequest.getSelecedHierarchyLabel().toUpperCase(), selectedId));
+							Pair.of(kpiRequest.getLabel().toUpperCase(), selectedId));
 			if (null != node) {
 				Object obj = node.getValue();
 				Map<String, List<DataCount>> valueMap =
@@ -890,7 +890,7 @@ public abstract class ToolsKPIService<R, S> {
 										value.stream()
 												.filter(val -> val.getValue() != null)
 												.map(val -> (R) val.getValue())
-												.collect(Collectors.toList());
+												.toList();
 								R calculatedAggValue = getCalculatedAggValue(aggValues, kpiId);
 								String aggregateValue = null;
 								String maturity =
@@ -933,9 +933,9 @@ public abstract class ToolsKPIService<R, S> {
 	 */
 	private List<DataCount> getList(List<DataCount> value, String kpiName) {
 		if (reverseTrendList.contains(kpiName)) {
-			return value.stream().limit(Constant.TREND_LIMIT).collect(Collectors.toList());
+			return value.stream().limit(Constant.TREND_LIMIT).toList();
 		} else {
-			return Lists.reverse(value).stream().limit(Constant.TREND_LIMIT).collect(Collectors.toList());
+			return Lists.reverse(value).stream().limit(Constant.TREND_LIMIT).toList();
 		}
 	}
 
@@ -957,7 +957,7 @@ public abstract class ToolsKPIService<R, S> {
 
 		if (Constant.SPRINT.equalsIgnoreCase(kpiRequest.getLabel())) {
 			populateSelectedIdInSprintSelection(kpiRequest, selectedIds);
-			kpiRequest.setSelecedHierarchyLabel(Constant.PROJECT.toUpperCase());
+			kpiRequest.setLabel(Constant.PROJECT.toUpperCase());
 		} else if (MapUtils.isNotEmpty(addFilterCat)
 				&& null != addFilterCat.get(kpiRequest.getLabel().toUpperCase())) {
 			Map<String, List<String>> kpiRequestSelectedMap = new HashMap<>();
@@ -972,10 +972,10 @@ public abstract class ToolsKPIService<R, S> {
 			} else {
 				selectedIds.addAll(kpiRequestSelectedMap.get(Constant.PROJECT.toUpperCase()));
 			}
-			kpiRequest.setSelecedHierarchyLabel(Constant.PROJECT.toUpperCase());
+			kpiRequest.setLabel(Constant.PROJECT.toUpperCase());
 		} else {
 			selectedIds = new HashSet<>(Arrays.asList(kpiRequest.getIds()));
-			kpiRequest.setSelecedHierarchyLabel(kpiRequest.getLabel());
+			kpiRequest.setLabel(kpiRequest.getLabel());
 		}
 		return selectedIds;
 	}
@@ -1318,7 +1318,7 @@ public abstract class ToolsKPIService<R, S> {
 		aggMap.forEach(
 				(key, objectList) -> {
 					List<Integer> value =
-							objectList.stream().map(Integer.class::cast).collect(Collectors.toList());
+							objectList.stream().map(Integer.class::cast).toList();
 					if (Constant.PERCENTILE.equalsIgnoreCase(aggregationCriteria)) {
 						if (null == customApiConfig.getPercentileValue()) {
 							resultMap.put(key, AggregationUtils.percentilesInteger(value, 90.0D));
